--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,99 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Space Grotesk", sans-serif;
+  @apply bg-primary min-h-screen text-base-100;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+section {
+  display: grid;
+  place-items: center;
+  height: 100vh;
 }
 
-* {
-  box-sizing: border-box;
+/* Scrollbar Styling */
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #0a192f;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  background-color: #64ffda;
+  border-radius: 10px;
+}
+
+::-moz-selection {
+  @apply text-white bg-primary-green;
+}
+
+::selection {
+  @apply text-white bg-primary-green;
+}
+
+.active {
+  @apply text-primary-aqua;
+}
+
+span {
+  @apply relative inline-block cursor-default mt-2;
+}
+
+.eyelid {
+  position: absolute;
+  width: 220px;
+  height: 100px;
+  z-index: 400;
+  top: -120px;
+  animation: blink 4.5s infinite ease-in alternate;
+  animation-delay: 1s;
+}
+
+@keyframes blink {
+  0% {
+    top: -120px;
+  }
+  95% {
+    top: -120px;
+  }
+  100% {
+    top: -50px;
+  }
+}
+
+.eyes {
+  display: relative;
+}
+
+.eye {
+  border-radius: 50%;
+  height: 1.2rem;
+  width: 1.2rem;
+}
+
+@media (min-width: 768px) {
+  .eye {
+    height: 2rem;
+    width: 2rem;
+  }
+}
+
+.pupil {
+  position: absolute;
+  background-color: #382e25;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  left: 15px;
+  top: 10px;
 }
